js/js.translator/testData/incremental/invalidation/localObjectsLeakThroughInterface/lib1/interface.0.kt
interface Interface {
    konst extraNumber get() = 0

    fun getNumber() = 0
}
